# narach-netra

./: .gitignore  README.md  database.db  main.py  pyproject.toml  requirements.txt
templates/: index.html
