[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "narach-netra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "authlib>=1.7.2",
    "dataset>=2.0.0",
    "flake8>=7.3.0",
    "flask>=3.1.3",
    "folium>=0.20.0",
    "requests>=2.34.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["narach_netra*"]
